<resources>
    <string name="app_name">Flyer Maker</string>

    <string name="about_us">About Us</string>
    <string name="add_sticker">Add Sticker</string>
    <string name="add_text">Add Text</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_you_want_exit_app">Are you sure you want exit ?</string>
    <string name="background_image">background_image</string>
    <string name="cancel">Cancel</string>
    <string name="enter_text">Enter Text</string>
    <string name="capture_image">Capture Image</string>
    <string name="categories">Categories</string>
    <string name="category_id">category_id</string>
    <string name="category_name">category_name</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_image">Choose Image</string>
    <string name="color">Color</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="data">data</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_web_client_id">869391132741-2r3395kirp0u75q4fojc2cei1fh49dun.apps.googleusercontent.com</string>
    <string name="double_tap_to_edit">Double Tap To Edit</string>
    <string name="edit">Edit</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="feedback">Feedback</string>
    <string name="file">file</string>
    <string name="font">Font</string>
    <string name="gallery_msg">Image saved in gallery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="id">id</string>
    <string name="image">Image</string>
    <string name="is_local">is_local</string>
    <string name="layer">layer</string>
    <string name="lock">lock</string>
    <string name="more_app">More Apps</string>
    <string name="my_design">My Design</string>
    <string name="no">No</string>
    <string name="no_data_available">No data available</string>
    <string name="no_design">No Design Found</string>
    <string name="no_flyer_available">No Flyer available</string>
    <string name="no_internet">No Internet Connection.</string>
    <string name="ok">OK</string>
    <string name="original_category_id">original_category_id</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="project_id">flyer-maker-949fa</string>
    <string name="rate_us">Rate Us</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="redo">redo</string>
    <string name="registration_msg">Your account is under verification process, You will be contacted by admin soon.</string>
    <string name="runtime_permissions_txt">Please enable required permissions from app settings.</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string name="search_menu_title">Search</string>
    <string name="see_all">See All</string>
    <string name="select_color">Select color</string>
    <string name="select_font">Select font</string>
    <string name="select_option">Select Option</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="template">Template</string>
    <string name="text">Text</string>
    <string name="undo">undo</string>
    <string name="view">view</string>
    <string name="view_type">view_type</string>
    <string name="wrong_str">Something went wrong!</string>
    <string name="yes">Yes</string>
    <string name="enable">Enable</string>
    <string name="unable_to_get_image">unable to pick image</string>

</resources>
