<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancel"
                app:srcCompat="@drawable/ic_cancel"
                android:background="@null"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/lblTitle"
                android:text="@string/select_option"
                android:textColor="@color/black"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/lblTitle"
            android:background="@color/gray"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/camera_btn"
                    android:background="@null"
                    android:id="@+id/imgBtnCamera"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capture_image"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:id="@+id/lblCaptureImage"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_btn"
                    android:background="@null"
                    android:id="@+id/imgBtnChooseImage"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_image"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:id="@+id/lblChooseImage"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>