<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditCompletionActivity"
    android:id="@+id/rootView">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomView"
            android:gravity="center"
            android:layout_margin="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image"
                android:src="@drawable/logo"
                android:adjustViewBounds="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:id="@+id/bottomView"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:backgroundTint="@color/white"
                    app:srcCompat="@drawable/ic_home"
                    android:onClick="onHomeClick"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblHome"
                    android:text="@string/home"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/fbSaveToGallery"
                    app:backgroundTint="@color/white"
                    app:srcCompat="@drawable/ic_gallery"
                    android:onClick="onSaveImageClick"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblSaveToGallery"
                    android:text="@string/save_to_gallery"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/fbShare"
                    app:backgroundTint="@color/white"
                    app:srcCompat="@drawable/ic_share_blue"
                    android:onClick="onShareClick"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:id="@+id/lblShare"
                    />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>