<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditImageActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar_aws" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomView"
            android:gravity="center">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/gray"
            android:minHeight="40dp"
            android:orientation="horizontal">

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/main_frame"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/navigation"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/sticker_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="@dimen/_4sdp">

                    <com.xiaopo.flying.sticker.StickerView
                        android:id="@+id/sticker_view"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="@dimen/_360sdp"
                        android:layout_gravity="center"
                        android:visibility="visible"
                        app:showBorder="true"
                        app:showIcons="true">

                        <ImageView
                            android:id="@+id/main_bg"
                            android:layout_width="@dimen/_250sdp"
                            android:layout_height="@dimen/_360sdp"
                            android:scaleType="fitXY"
                            android:src="@drawable/image_place_holder" />
                    </com.xiaopo.flying.sticker.StickerView>

                    <ImageView
                        android:id="@+id/temp_view"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="@dimen/_360sdp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/main_motion_text_entity_edit_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageButton
                        android:id="@+id/text_entity_font_size_decrease"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_neg_1" />

                    <ImageButton
                        android:id="@+id/text_entity_font_size_increase"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_plus_1" />

                    <ImageButton
                        android:id="@+id/text_entity_color_change"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_format_color_text" />

                    <ImageButton
                        android:id="@+id/text_entity_font_change"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_text_fields" />

                    <ImageButton
                        android:id="@+id/text_entity_edit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_mode_edit" />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/rel_layer"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_360sdp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/main_frame"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/main_frame">

                <RelativeLayout
                    android:id="@+id/drawer_rel"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_360sdp"
                    android:visibility="gone">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/layer_recycler"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="match_parent"
                        android:background="@drawable/transparent_rounded_corner" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/layer_side_open_btn"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/layer_side_btn"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/navigation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:background="@color/white"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <LinearLayout
                    android:id="@+id/linear_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:onClick="onAddTextClick"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_text_tab" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onAddTextClick"
                        android:text="@string/text"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:onClick="onAddImageClick"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_image_tab" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onAddImageClick"
                        android:text="@string/image"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_font"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:onClick="onFontChange"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_font_tab" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onFontChange"
                        android:text="@string/font"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:onClick="onPickColorClick"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_color_tab" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onPickColorClick"
                        android:text="@string/color"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_template"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:onClick="onTemplateColorClick"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_template_tab" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onTemplateColorClick"
                        android:text="@string/template"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</RelativeLayout>